Fix menu spacing

--- a/themes/cp_theme_d8/css/menu.css
+++ b/themes/cp_theme_d8/css/menu.css
@@ -218,7 +218,7 @@
     margin-bottom: 1rem;
   }
 
-  #cp_theme_d8_menu-menu ul ul ul ul {
+  #cp_theme_d8_menu ul ul ul ul {
     margin-bottom: 0;
   }
 
